--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+json = "0.12.4"
+serde = {version = "1.0.219", features = ["derive"]}
+serde_json = "1.0.142"
