--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 json = "0.12.4"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.142"
+reqwest = {version = "0.12.22", features = ["blocking"]}
