--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ json = "0.12.4"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.142"
 reqwest = {version = "0.12.22", features = ["blocking"]}
+url = "2.5.7"
