--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.142"
 reqwest = {version = "0.12.22", features = ["blocking"]}
 url = "2.5.7"
+tokio = {version = "1.47.1", features = ["full"]}
