--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ serde_json = "1.0.142"
 reqwest = {version = "0.12.22", features = ["blocking"]}
 url = "2.5.7"
 tokio = {version = "1.47.1", features = ["full"]}
+tempfile = "3.21.0"
+zip = "4.5.0"
+fern = "0.7.1"
